
  * The column sort order in the Instruments Database window is now saved
    for the next session

  * Optimized the MIDI instrument update process

  * Added support for handling lost files in the Instruments Database
    (In the Instruments Database window choose Actions/Check For Lost Files)

  * Added new menu item in the Instruments Database window: Edit/Find

  * Fantasia:
    - Added option to show the Instruments Database on
      the Right-Side Pane of the Fantasia's main window
      (choose Edit/Preferences, then click the `View' tab)
    - Implemented pluggable channel view
    - Implemented Small View for sampler channels
      (right-click on the sampler channel then choose Small View)
    - Implemented option to choose default sampler channel view
      (choose Edit/Preferences, then click the `Defaults' tab)
    - Added context menu to sampler channels
    - Implemented option to show different channel view when
      the mouse pointer is over sampler channel
      (choose Edit/Preferences, then click the `Defaults' tab)

  * Bug fixes:
    - bugfix: JSampler took forever to load a configuration with
      too many sampler channels
    - fixed bug #66
    - fixed a null pointer exception in the AudioDevicePane, when JACK
      driver is used and the additional device parameters are shown.
    - fixed bug #76
    - fixed bug #77
    - fixed bug #84
    - Some minor bugfixes and enhancements

JSampler v0.8a: 2007-12-06
  * Added new menu item: Help/Online Tutorial

  * Implemented support for retrieving instrument information
    from instrument files

  * Added support for monitoring the total number of active disk streams

  * Added Windows file path support

  * The volume values are now shown in decibels

  * Added confirmation dialog on exit

  * Fantasia:
    - Added option for turning off the custom window decoration
      (choose Edit/Preferences, then click the `View' tab)

  * Bug fixes: